[package]
name = "aes_side_channel"
version = "0.1.0"
authors = ["david haioum <dav6983@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matfile = "0.2.1"
hamming = "0.1.3"
ndarray = "0.14.0"
ndarray-stats = "0.4.0"